test/tools/javac/annotations/typeAnnotations/failures/common/newarray/MissingAnnotationValue.java
/*
 * @test /nodynamiccopyright/
 * @bug 6843077 8006775
 * @summary check for missing annotation value
 * @author Mahmood Ali
 * @compile/fail/ref=MissingAnnotationValue.out -XDrawDiagnostics MissingAnnotationValue.java
 */
class MissingAnnotationValue {
  void test() {
    String[] a = new String @A [5];
  }
}

@interface A { int field(); }
